# qoiviewer

./: Cargo.toml
src/: decoder.rs  main.rs
