[package]
name = "qoiviewer"
version = "0.1.0"
edition = "2021"
default-run = "qoiviewer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.5", features = [ 'png' ] }
sdl2 = { version = "0.35.2", features = [ 'use-pkgconfig', 'static-link' ] }
